my cv correction

--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
     <div class="contacts">
       <h2>contacts</h2>
       <nav>
-      <ul>
-        <li><a target="_blank" href="https://www.instagram.com"><img src="insta.jpeg" alt="insta"></a></li>
-        <li><a target="_blank" href="https://twitter.com/LisangolaM"><img src="twitter.png" alt="twitter"></a></li>
-        <li><a target="_blank" href="https://github.com/Marisel4"><img src="github-box.svg" alt="github"></a></li>
-      </ul>
+      <a target="_blank" href="https://www.instagram.com"><img src="insta.jpeg" alt="insta"></a>
+      <a target="_blank" href="https://twitter.com/LisangolaM"><img src="twitter.png" alt="twitter"></a>
+      <a target="_blank" href="https://github.com/Marisel4"><img src="github-box.svg" alt="github"></a>
    </nav>
 </div>
 </div>
